--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,24 +1,24 @@
 <div style="width: 600px; height: 400px; border: 1px outset; margin: 10%">
-    <input type="text" style="margin: 5%; height: 12%; width: 63.7%; direction:rtl; font-size:x-large" value="0"/>
+    <input type="text" style="margin: 5%; height: 12%; width: 63.7%; direction:rtl; font-size:x-large" ng-model="char" readonly/>
     <br/>
-    <input type="button" style="margin-left: 5%; width: 70px; height: 40px" value="7"/>
-    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="8"/>
-    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="9"/>
-    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="÷"/>
-    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px; background-color: red" value="AC"/>
+    <input type="button" style="margin-left: 5%; width: 70px; height: 40px" value="7" ng-click="onClickButton(7)"/>
+    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="8" ng-click="onClickButton(8)"/>
+    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="9" ng-click="onClickButton(9)"/>
+    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px; background-color: #d6d6d6" value="÷" ng-click="onClickButton('÷')"/>
+    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px; background-color: red" value="AC" ng-click="AC()"/>
     <br/>
-    <input type="button" style="margin-left: 5%; margin-top: 1.8%; width: 70px; height: 40px" value="4"/>
-    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="5"/>
-    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="6"/>
-    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="x"/>
+    <input type="button" style="margin-left: 5%; margin-top: 1.8%; width: 70px; height: 40px" value="4" ng-click="onClickButton(4)"/>
+    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="5" ng-click="onClickButton(5)"/>
+    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="6" ng-click="onClickButton(6)"/>
+    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px; background-color: #d6d6d6" value="x" ng-click="onClickButton('x')"/>
     <br/>
-    <input type="button" style="margin-left: 5%; margin-top: 1.8%; width: 70px; height: 40px" value="1"/>
-    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="2"/>
-    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="3"/>
-    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="-"/>
+    <input type="button" style="margin-left: 5%; margin-top: 1.8%; width: 70px; height: 40px" value="1" ng-click="onClickButton(1)"/>
+    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="2" ng-click="onClickButton(2)"/>
+    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="3" ng-click="onClickButton(3)"/>
+    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px; background-color: #d6d6d6" value="-" ng-click="onClickButton('-')"/>
     <br/>
-    <input type="button" style="margin-left: 5%; margin-top: 1.8%; width: 70px; height: 40px" value="0"/>
-    <input type="button" style="margin-left: 0.8%; margin-top: 1.8%; width: 70px; height: 40px" value="."/>
-    <input type="button" style="margin-left: 0.8%; margin-top: 1.8%; width: 70px; height: 40px; background-color: #4d90fe" value="="/>
-    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px" value="+"/>
+    <input type="button" style="margin-left: 5%; margin-top: 1.8%; width: 70px; height: 40px" value="0" ng-click="onClickButton(0)"/>
+    <input type="button" style="margin-left: 0.8%; margin-top: 1.8%; width: 70px; height: 40px" value="." ng-click="onClickButton('.')"/>
+    <input type="button" style="margin-left: 0.8%; margin-top: 1.8%; width: 70px; height: 40px; background-color: #4d90fe" value="=" ng-click="onClickButton('=')"/>
+    <input type="button" style="margin-left: 0.8%; width: 70px; height: 40px; background-color: #d6d6d6" value="+" ng-click="onClickButton('+')"/>
 </div>
